# jurisearch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  deploy.sh  dist.sh
crates/jurisearch-buildinfo/: Cargo.toml
crates/jurisearch-buildinfo/src/: lib.rs
crates/jurisearch-cli/: Cargo.toml
crates/jurisearch-cli/src/: args.rs  ascii.rs  citation.rs  date.rs  dispatch.rs  embedding_runtime.rs  errors.rs  index_runtime.rs  ingest.rs  legifrance_search.rs  main.rs  output.rs  query_support.rs  request.rs  serve.rs  session.rs  status.rs  tests.rs
crates/jurisearch-cli/src/embedding_runtime/: config.rs  mod.rs  pool.rs  status.rs
crates/jurisearch-cli/src/enrichment/: archive.rs  decision_part.rs  judilibre_zones.rs  legislation.rs  mod.rs
crates/jurisearch-cli/src/eval/: artifact.rs  authority.rs  france_juris.rs  france_legi.rs  generic.rs  mod.rs  scoring.rs  zones.rs
crates/jurisearch-cli/src/gates/: mod.rs  phase1.rs  phase2.rs  support.rs
crates/jurisearch-cli/src/ingest/: juri.rs  legi.rs  pipeline.rs  run.rs
crates/jurisearch-cli/src/retrieval/: cite.rs  compare.rs  context.rs  expand.rs  fetch.rs  mod.rs  related.rs  search.rs  zone.rs
crates/jurisearch-cli/src/site/: dispatcher.rs  handlers.rs  listener.rs  mod.rs  serve.rs  tests.rs
crates/jurisearch-cli/tests/: cli_byte_parity.rs  cli_contract.rs  cli_eval_contract.rs  cli_help_contract.rs  cli_ingest_contract.rs  cli_retrieval_contract.rs  cli_session_contract.rs  cli_site_contract.rs  cli_status_contract.rs
crates/jurisearch-cli/tests/support/: mod.rs
crates/jurisearch-client/: Cargo.toml
crates/jurisearch-client/src/: config.rs  lib.rs  main.rs
crates/jurisearch-client/tests/: cli_acceptance.rs  configure_doctor.rs  dependency_cone.rs
crates/jurisearch-deploy/: Cargo.toml  build.rs
crates/jurisearch-deploy/fixtures/: README.md
crates/jurisearch-deploy/scripts/: single-host-demo-acceptance.sh
crates/jurisearch-deploy/src/: bind.rs  config.rs  error.rs  lib.rs  render.rs  scaffold.rs  secret.rs  tests.rs  validate.rs
crates/jurisearch-deploy/src/ops/: catchup.rs  connection.rs  demo.rs  doctor.rs  embed.rs  fixture.rs  lifecycle.rs  mod.rs  provision.rs  readiness.rs  smoke.rs  trust.rs  watchdog.rs
crates/jurisearch-embed/: Cargo.toml
crates/jurisearch-embed/src/: client.rs  config.rs  error.rs  fingerprint.rs  lib.rs  tests.rs  tokenizer.rs
crates/jurisearch-embed/tests/: live_endpoint.rs
crates/jurisearch-fetch/: Cargo.toml
crates/jurisearch-fetch/src/: cursor.rs  engine.rs  error.rs  integrity.rs  lib.rs  listing.rs  remote.rs
crates/jurisearch-fetch/tests/: fetch.rs
crates/jurisearch-fetch/tests/support/: mod.rs
crates/jurisearch-ingest/: Cargo.toml
crates/jurisearch-ingest/src/: lib.rs
crates/jurisearch-ingest/src/archive/: mod.rs  parser.rs  planner.rs  reader.rs
crates/jurisearch-ingest/src/juri/: chunks.rs  dates.rs  inferred_citations.rs  mod.rs  parser.rs  publisher_links.rs  tests.rs  types.rs  (+1 more)
crates/jurisearch-ingest/tests/: archive_contract.rs  juri_archive_subset.rs  legi_archive_subset.rs
crates/jurisearch-official-api/: Cargo.toml
crates/jurisearch-official-api/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs  tests.rs
crates/jurisearch-package/: Cargo.toml
crates/jurisearch-package-build/: Cargo.toml
crates/jurisearch-package-build/src/: baseline.rs  cycle.rs  error.rs  incremental.rs  lib.rs  publish.rs  remote_manifest.rs  verify.rs
crates/jurisearch-package-build/tests/: baseline_loopback.rs  bootstrap_baseline_loopback.rs  catchup_loop.rs  concurrency_soak.rs  conformance_reject_codes.rs  daemon_loop.rs  incremental_loopback.rs  publish_distribution.rs  rebaseline_cycle_loopback.rs  rebaseline_from_db_loopback.rs  rebaseline_loopback.rs  reference_validation.rs  shared_writer_loopback.rs  trust_gating.rs
crates/jurisearch-package/src/: artifact.rs  canonical.rs  compat.rs  corpus.rs  crypto.rs  event.rs  identity.rs  lib.rs  license.rs  package_kind.rs  reject.rs  sequence.rs  signed.rs
crates/jurisearch-package/tests/: contract_acceptance.rs
crates/jurisearch-pipeline/: Cargo.toml
crates/jurisearch-pipeline/src/: build_zone_units.rs  embed.rs  enrich.rs  error.rs  lib.rs
crates/jurisearch-pipeline/tests/: build_zone_units.rs
crates/jurisearch-producer/: Cargo.toml
crates/jurisearch-producer/src/: alert.rs  baseline.rs  config.rs  cursors.rs  error.rs  exit.rs  fetch.rs  freshness.rs  lib.rs  lock.rs  publish_baseline.rs  render.rs  retention.rs  runrecord.rs  status.rs  timestamp.rs  update.rs
crates/jurisearch-producer/tests/: alert_hook.rs  baseline_boundary.rs  config_and_fingerprint.rs  cursor_distinctness.rs  fetch_wiring.rs  lock_and_classify.rs  lock_serialization.rs  publish_baseline_gated.rs  rebaseline_retention_freshness.rs  run_record_and_status.rs  scheduling_render.rs  update_publish_gated.rs
crates/jurisearch-storage/: CLIENT_SOURCE_AUDIT.md  Cargo.toml
crates/jurisearch-storage/src/: authority.rs  backend.rs  citation.rs  decision_zones.rs  dense.rs  france_juris.rs  france_legi.rs  generations.rs  incremental.rs  ingest_accounting.rs  legislation_citations.rs  lib.rs  migrations.rs  official_api_archive.rs  outbox.rs  package_catalog.rs  projection.rs  provision.rs  query.rs  reference.rs  retrieval.rs  runtime.rs  trust.rs  zone_retrieval.rs  zone_units.rs
crates/jurisearch-storage/tests/: chunk_fingerprint_preserve.rs  client_source_parity.rs  decision_projection.rs  dense_rebuild.rs  durable_lifecycle.rs  extension_smoke.rs  france_legi_gold.rs  generations.rs  ingest_accounting.rs  legi_canonical_retrieval.rs  legi_metadata_projection.rs  legislation_citations.rs  official_api_archive.rs  outbox.rs  package_catalog.rs  provision_external.rs  query_fanout_p3c.rs  query_readiness_p3a.rs  query_snapshot_p3b.rs  retrieval_smoke.rs  schema_migrations.rs  shared_server_roles.rs  structural_survival.rs  target_spike_corpus.rs  zone_units.rs
crates/jurisearch-syncd/: Cargo.toml
crates/jurisearch-syncd/src/: apply.rs  daemon.rs  error.rs  lib.rs  main.rs  planner.rs  status.rs  trust.rs
(+1011 files in other folders)
