[workspace]
members = [
    "crates/jurisearch-core",
    "crates/jurisearch-cli",
    "crates/jurisearch-embed",
    "crates/jurisearch-ingest",
    "crates/jurisearch-storage",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "AGPL-3.0-or-later"
repository = "https://example.invalid/jurisearch"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1.1.2"
fs2 = "0.4.3"
postgres = "0.19"
predicates = "3.1.3"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.14"
ureq = { version = "2.12.1", features = ["json"] }
walkdir = "2.5.0"
