[package]
name = "jurisearch-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "jurisearch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-embed = { path = "../jurisearch-embed" }
jurisearch-ingest = { path = "../jurisearch-ingest" }
jurisearch-storage = { path = "../jurisearch-storage" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
