[package]
name = "jurisearch-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "jurisearch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-embed = { path = "../jurisearch-embed" }
jurisearch-ingest = { path = "../jurisearch-ingest" }
jurisearch-official-api = { path = "../jurisearch-official-api" }
jurisearch-query = { path = "../jurisearch-query" }
jurisearch-render = { path = "../jurisearch-render" }
jurisearch-storage = { path = "../jurisearch-storage" }
jurisearch-transport = { path = "../jurisearch-transport" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
flate2.workspace = true
jurisearch-client = { path = "../jurisearch-client" }
predicates.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
