[package]
name = "jurisearch-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The STRUCTURALLY-SEPARATE thin client (work/09 P6): connects to a site query service by URL, speaks the
# versioned site protocol, and renders responses identically to the one-shot CLI. It depends ONLY on the
# three dependency-light base crates (contract/transport/render) — NO storage/embed/ingest/cli stack (a
# dependency-cone test enforces this). The local heavy CLI remains the rollback path.

[lib]
name = "jurisearch_client"
path = "src/lib.rs"

[[bin]]
name = "jurisearch-client"
path = "src/main.rs"

[dependencies]
# Single-source --version stamping: the build.rs calls `stamp()`; this dep exposes the `version!()` macro.
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-transport = { path = "../jurisearch-transport" }
jurisearch-render = { path = "../jurisearch-render" }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true

# build.rs stamps the git commit + build target into this crate's compile env (see build.rs).
[build-dependencies]
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }

[dev-dependencies]
tempfile.workspace = true
