[package]
name = "jurisearch-deploy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Operator deployment layer (plan 01-makeitsimpletodeploy, Phase 1): the strict `SiteConfig` parser,
# deterministic env/unit rendering, the shared config primitives (secret redaction + secret-file
# permission helpers reused later by the producer config), and the `jurisearchctl` admin binary.

[lib]
name = "jurisearch_deploy"
path = "src/lib.rs"

[[bin]]
name = "jurisearchctl"
path = "src/bin/jurisearchctl.rs"

[dependencies]
# Reuse the embedder config + loopback classifier; do NOT duplicate fingerprint/base-url logic.
jurisearch-embed = { path = "../jurisearch-embed" }
# M4 operator commands WRAP the already-built site/syncd/embedder + storage provisioning/readiness.
# jurisearchctl is the operator tool, so depending on these operational crates is intended (the
# thin-client cone constraint applies to jurisearch-CLIENT, not to jurisearchctl).
jurisearch-storage = { path = "../jurisearch-storage" }
jurisearch-syncd = { path = "../jurisearch-syncd" }
jurisearch-package = { path = "../jurisearch-package" }
# M5-B demo/smoke/watchdog: the thin client (real status/fetch/search legs), the contract DTOs
# (SessionRequest/SiteSearchArgs shapes), and the package builder library (the documented FIXTURE
# generator helper). Consumed read-only as libraries — jurisearchctl is the operator tool, not the
# thin client, so depending on these does not affect the jurisearch-CLIENT dependency cone.
jurisearch-client = { path = "../jurisearch-client" }
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-package-build = { path = "../jurisearch-package-build" }
anyhow.workspace = true
clap.workspace = true
# Named only for the admin/bootstrap CREATE DATABASE glue in `ops::provision` (the schema/role SQL all
# lives in jurisearch-storage); `ConnectionConfig::connect` hands back a `postgres::Client`.
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
