[package]
name = "jurisearch-fetch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "jurisearch_fetch"
path = "src/lib.rs"

[dependencies]
jurisearch-ingest = { path = "../jurisearch-ingest" }
flate2.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
