[package]
name = "jurisearch-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flate2.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
