[package]
name = "jurisearch-official-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
jurisearch-core = { path = "../jurisearch-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
