[package]
name = "jurisearch-package-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Producer-side package builder (plan P3+): materialise baseline/incremental/rebaseline artifacts from
# the authoritative tables + outbox, and own the producer package catalog. Depends on the contract
# crate (jurisearch-package) and storage read/COPY helpers (jurisearch-storage).

[[bin]]
name = "jurisearch-package"
path = "src/bin/jurisearch_package.rs"

[dependencies]
jurisearch-package = { path = "../jurisearch-package" }
jurisearch-storage = { path = "../jurisearch-storage" }
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
jurisearch-syncd = { path = "../jurisearch-syncd" }
tempfile.workspace = true
