[package]
name = "jurisearch-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "jurisearch_pipeline"
path = "src/lib.rs"

[dependencies]
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-embed = { path = "../jurisearch-embed" }
jurisearch-ingest = { path = "../jurisearch-ingest" }
jurisearch-official-api = { path = "../jurisearch-official-api" }
jurisearch-storage = { path = "../jurisearch-storage" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
