[package]
name = "jurisearch-producer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The update-server / package-origin orchestrator (work/10 milestone M2-B). Drives, IN-PROCESS, the
# core producer data path against an EXTERNAL PostgreSQL: DILA fetch -> ingest -> enrich/skip honestly ->
# document embed -> producer_cycle("core") -> signed manifest. Library-first: it calls the reusable
# crate APIs (jurisearch-fetch / jurisearch-pipeline / jurisearch-package-build / jurisearch-storage)
# and NEVER shells out to `jurisearch` / `jurisearch-package`.

[lib]
name = "jurisearch_producer"
path = "src/lib.rs"

[[bin]]
name = "jurisearch-producer"
path = "src/bin/jurisearch_producer.rs"

[dependencies]
# Single-source --version stamping: the build.rs calls `stamp()`; this dep exposes the `version!()` macro.
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }
jurisearch-core = { path = "../jurisearch-core" }
jurisearch-fetch = { path = "../jurisearch-fetch" }
jurisearch-pipeline = { path = "../jurisearch-pipeline" }
jurisearch-package = { path = "../jurisearch-package" }
jurisearch-package-build = { path = "../jurisearch-package-build" }
jurisearch-storage = { path = "../jurisearch-storage" }
# Reuse the deploy secret-handling primitives (redaction + secret-file permission helpers). Do NOT pull
# in the site loopback-only embedder guard — the producer embeds public text via an external provider.
jurisearch-deploy = { path = "../jurisearch-deploy" }
jurisearch-embed = { path = "../jurisearch-embed" }
jurisearch-official-api = { path = "../jurisearch-official-api" }
jurisearch-ingest = { path = "../jurisearch-ingest" }
anyhow.workspace = true
clap.workspace = true
fs2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

# build.rs stamps the git commit + build target into this crate's compile env (see build.rs).
[build-dependencies]
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }

[dev-dependencies]
jurisearch-syncd = { path = "../jurisearch-syncd" }
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
