[package]
name = "jurisearch-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fs2.workspace = true
jurisearch-ingest = { path = "../jurisearch-ingest" }
jurisearch-package = { path = "../jurisearch-package" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
