[package]
name = "jurisearch-syncd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Consumer-side sync service (plan P3+): verify -> apply (baseline/incremental/rebaseline) -> corpus
# status, on the client storage topology (generations/views/cursor). The "consumer brain". Each
# sub-responsibility is a module (SRP). Depends on the contract crate + storage apply primitives.

[lib]
name = "jurisearch_syncd"
path = "src/lib.rs"

[[bin]]
name = "jurisearch-syncd"
path = "src/main.rs"

[dependencies]
# Single-source --version stamping: the build.rs calls `stamp()`; this dep exposes the `version!()` macro.
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }
jurisearch-package = { path = "../jurisearch-package" }
jurisearch-storage = { path = "../jurisearch-storage" }
anyhow.workspace = true
clap.workspace = true
# Graceful shutdown: block SIGTERM/SIGINT + a sigwait thread (work/09 P5). No async runtime.
libc = "0.2"
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# build.rs stamps the git commit + build target into this crate's compile env (see build.rs).
[build-dependencies]
jurisearch-buildinfo = { path = "../jurisearch-buildinfo" }

[dev-dependencies]
tempfile.workspace = true
